--- a/css/styles.css
+++ b/css/styles.css
@@ -82,10 +82,15 @@ button::-moz-focus-inner {
 /* Header */
 header {
   position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   top: 0;
   z-index: 100;
+  width: 100%;
   background-color: white;
   padding: 10px 25px;
+  height: 60px;
   letter-spacing: 0.05em;
 }
 
@@ -93,6 +98,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 
 .logo {
@@ -199,7 +205,7 @@ nav {
 
 /* Hero section */
 #hero {
-  height: 100vh;
+  height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -234,11 +240,13 @@ nav {
   width: 100%;
   display: flex;
   flex: 1;
+  justify-content: center;
 }
 
 #hero-image {
-  width: 100%;
+  width: 80%;
   height: auto;
+  margin-top: -24px;
   object-fit: cover;
   object-position: top;
 }
@@ -345,9 +353,34 @@ nav {
 #experience h3 {
   text-align: center;
   font-size: 1.7rem;
+  margin-bottom: 3rem;
 }
 
-.experience-grid {
+#experience-container {
+  display: flex;
+}
+
+#verticode-logo {
+  height: 12rem;
+}
+
+#sector-grid {
+  display: grid;
+  grid-template-columns: 6;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+.sector-card {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  font-size: 1.2rem;
+  background-color: #f9f9f9;
+  border-radius: 15px;
+  width: max-content;
+}
+
+#experience-grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 1.5rem;
@@ -406,11 +439,6 @@ footer {
   display: flex;
   align-items: center;
   gap: 7px;
-}
-
-.copyright-wrapper {
-  display: flex;
-  align-items: center;
 }
 
 /* Media Queries */
@@ -479,7 +507,7 @@ footer {
 /* Laptop (1024px) */
 @media (min-width: 1024px) {
   #hero {
-    height: 100vh;
+    height: calc(100vh - 60px);
   }
 
   #hero-title-container {
