--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,11 @@ h1 {
   margin-bottom: 1rem;
   line-height: 1;
 }
+h2 {
+  text-align: center;
+  margin-bottom: 3rem;
+  font-size: 1.7rem;
+}
 
 h3 {
   font-size: 2rem;
@@ -231,10 +236,12 @@ nav {
   max-width: 100%;
   width: 100%;
   flex-shrink: 0;
+  padding-left: 1rem;
 }
 
 #hero h1 {
   font-size: 3rem;
+  text-align: left;
 }
 
 #hero h2 {
@@ -242,10 +249,12 @@ nav {
   font-weight: 300;
   margin-bottom: 1rem;
   line-height: 1.2;
+  text-align: left;
 }
 
 #hero h3 {
   font-size: 2rem;
+  text-align: left;
 }
 
 #hero-image-container {
@@ -258,7 +267,8 @@ nav {
 #hero-image {
   width: 100%;
   height: auto;
-  margin-top: -24px;
+  margin-top: -48px;
+  margin-left: 64px;
   object-fit: cover;
   object-position: top;
 }
@@ -267,15 +277,8 @@ nav {
 #about {
   margin-top: 10px;
   font-weight: 300;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   text-align: center;
-}
-
-/* Passionate about section */
-#passionate-about h2 {
-  text-align: center;
-  margin-bottom: 3rem;
-  font-size: 1.7rem;
 }
 
 .passion-grid {
@@ -310,14 +313,14 @@ nav {
 }
 
 .passion-icon {
-  font-size: 3rem;
+  font-size: 4rem;
   margin-bottom: 1rem;
   color: #333;
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
 .passion-title {
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 0.5rem;
   font-size: 1.2rem;
   transition: opacity 0.3s ease, transform 0.3s ease;
@@ -352,25 +355,27 @@ nav {
 
 /* Stack section */
 #stack {
-  font-size: 1.5rem;
-  opacity: 0.7;
-  font-weight: 400;
-  margin-bottom: 2rem;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
+}
+
+#stack-heading {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .stack-grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 2rem;
+  gap: 0.5rem;
   width: 100%;
   justify-items: center;
 }
 
 .stack-logo {
-  max-height: 70px;
+  max-height: 60px;
 }
 
 .screenshot {
@@ -384,8 +389,9 @@ nav {
 
 #products-heading {
   text-align: center;
-  font-size: 1.7rem;
-  margin-bottom: 3rem;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 #experience-container {
@@ -415,7 +421,6 @@ nav {
 }
 
 #sector-container h4 {
-  margin-top: 2rem;
   margin-bottom: 1.3rem;
 }
 .sector-card {
@@ -431,7 +436,7 @@ nav {
 .sector-row {
   display: flex;
   flex-direction: wrap;
-  align-items: start;
+  align-items: center;
   align-self: start;
   flex-wrap: wrap;
   gap: 1rem;
@@ -446,7 +451,7 @@ nav {
 .metric-cards {
   display: flex;
   gap: 1rem;
-  margin: 1rem 0;
+  margin: 2.5rem 1rem;
   flex-wrap: wrap;
 }
 
