--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ nav {
 
 /* Contact button */
 .contact-button {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   display: flex;
   align-items: end;
   justify-content: end;
@@ -231,7 +231,6 @@ nav {
 
 .arrow-icon {
   font-size: 0.8em;
-  margin-top: 2px;
 }
 
 /* Hero section */
@@ -403,6 +402,12 @@ nav {
   margin-top: 3rem;
 }
 
+#products-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 #experience-container {
   display: flex;
   align-items: center;
@@ -456,13 +461,15 @@ nav {
   font-size: 0.8rem;
   line-height: 1.6;
   flex: 1;
+  color: #6d6d6d;
   min-width: 0;
 }
 .metric-cards {
   display: flex;
   gap: 1rem;
-  margin: 2.5rem 1rem;
+  margin: 3rem 1rem;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .metric-card {
@@ -470,7 +477,7 @@ nav {
   padding: 1rem;
   text-align: center;
   flex: 1 1 150px;
-  box-shadow: 0 2px 6px;
+  box-shadow: 0 2px 6px #a6a5a5;
 }
 
 .metric-value {
@@ -624,6 +631,10 @@ footer {
     gap: 4rem;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .metric-card {
+    max-width: 25%;
   }
 }
 
