--- a/css/styles.css
+++ b/css/styles.css
@@ -294,6 +294,7 @@ nav {
   width: 100%;
   flex-shrink: 0;
   padding-left: 1rem;
+  padding-top: 2rem;
   height: 45%;
   display: flex;
   flex-direction: column;
@@ -334,7 +335,7 @@ nav {
   height: auto;
   margin-top: -48px;
   margin-left: 64px;
-  object-fit: cover;
+  object-fit: fill;
   object-position: bottom;
   max-height: 100%;
 }
@@ -465,7 +466,7 @@ nav {
 }
 
 #verticode-logo {
-  height: 12rem;
+  height: 10rem;
 }
 
 #verticode-description {
@@ -634,6 +635,7 @@ footer {
 
   #experience-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
   }
@@ -694,9 +696,6 @@ footer {
 
   .passion-description {
     font-size: 1rem;
-  }
-  #experience-container {
-    justify-content: center;
   }
 
   .project-grid {
