--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ nav {
   height: auto;
   margin-top: -48px;
   margin-left: 64px;
-  object-fit: fill;
+  object-fit: contain;
   object-position: bottom;
   max-height: 100%;
 }
@@ -343,7 +343,7 @@ nav {
 #about {
   margin-top: 10px;
   font-weight: 300;
-  font-size: 1.35rem;
+  font-size: 1.2rem;
   text-align: center;
 }
 
@@ -462,6 +462,13 @@ nav {
 #products-container {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+#experience-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 1rem;
 }
 
